Book: first and second tutorials corrected and made more clear
Until now, there were several typos were found in the first and second
tutorials, also there were some unclear parts that caused confusion.

With this commit, the typos have been corrected and some extra explanation
has been added to clarify some confusing points.

Besides that the size of the final image in the first tutorial is now
changed to 499x499 pixels (instead of 500x500), so the center of the mock
Andromeda falls in the central image pixel. The PSF size has also been
corrected to match the new way that MakeProfiles builds kernels (avoiding
one extra layer of zero-valued pixels).

The points were raised by Zahra Sharbaf and Elham Saremi.

--- a/THANKS
+++ b/THANKS
@@ -65,6 +65,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Elham Saremi                         saremi@ipm.ir
     Yahya Sefidbakht                     y.sefidbakht@gmail.com
     Alejandro Serrano Borlaff            asborlaff@ucm.es
+    Zahra Sharbaf                        samaeh.sharbaf2@yahoo.com
     Jenny Sorce                          jenny.sorce@univ-lyon1.fr
     Lee Spitler                          lee.spitler@mq.edu.au
     Richard Stallman                     rms@gnu.org
