Book: full edit of the general tutorial, broken into subsections now
Until now, the general program usage tutorial in the book was a little too
long (23 pages in PDF). This made it hard for new readers to follow the
relation between the major steps.

With this commit, it is broken up into subsections, and as part of doing
this, I also made some minor additions, edits and clarifications.

--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,10 @@ See the end of the file for license conditions.
      with the warnings, you can use the new `--quietmmap' option to disable
      them.
 
+  Book:
+   - General program usage tutorial divided into subsections for easier
+     readability.
+
   Arithmetic:
    - `unique' operator removes all duplicate (and blank) elements from the
      dataset and returns a single-dimension output, containing only the
