--- a/NEWS
+++ b/NEWS
@@ -140,6 +140,7 @@ See the end of the file for license conditions.
   bug #56424: Warp crashes with empty string given to options.
   bug #56480: Segfault in statistics library's histogram function.
   bug #56641: MakeProfile's center position changes based on precision.
+  bug #56635: Update tutorial 3 with bug-fixed NoiseChisel.
 
 
 
