Installation: configure script checks before using -Wl,-R
Until now, for the internal processing of the configure script, we would
convert any `-R's in `LDADD' to `-Wl,-R'. But while testing on a macOS, we
noticed that it crashes and complains about not understanding this
option. The problem was fixed when we removed this conversion.

Therefore with this commit, we do a simple check before the conversion and
if the compiler doesn't recognize `-Wl,-R', we won't convert.

This fixes bug #56662.

--- a/NEWS
+++ b/NEWS
@@ -141,6 +141,7 @@ See the end of the file for license conditions.
   bug #56480: Segfault in statistics library's histogram function.
   bug #56641: MakeProfile's center position changes based on precision.
   bug #56635: Update tutorial 3 with bug-fixed NoiseChisel.
+  bug #56662: Converting -R to -Wl,-R causes a crash in configure on macOS.
 
 
 
