--- a/NEWS
+++ b/NEWS
@@ -18,10 +18,6 @@ See the end of the file for license conditions.
      with the warnings, you can use the new `--quietmmap' option to disable
      them.
 
-  Book:
-   - General program usage tutorial divided into subsections for easier
-     readability.
-
   Arithmetic:
    - `unique' operator removes all duplicate (and blank) elements from the
      dataset and returns a single-dimension output, containing only the
@@ -129,6 +125,15 @@ See the end of the file for license conditions.
        - gal_table_read
        - gal_tiff_read
        - gal_txt_image_read
+
+  Book:
+   - The two larger tutorials ("General program usage tutorial", and
+     "Detecting large extended targets") have been broken into subsections
+     for easier readability.
+   - The "Hubble visually checks and classifies his catalog" tutorial has
+     been removed because it didn't come with a dataset, so it was hard for
+     people to use. Also, all its operations were already present in the
+     general tutorial.
 
 ** Bugs fixed
   bug #56195: astscript-sort-by-night crashing because of AWK.
