qsort library: floating point NaN values placed in the end
Until now, all the `gal_qsort' functions that worked with floating point
types simply returned the standard check (like `(ta > tb) - (ta < tb)' for
an increasing sort). However, if any, or both, of the elements were NaN, it
would return 0 (meaning equal). This would create an incorrect sorted
result.

To fix the problem, with this commit a `COMPARE_FLOAT_POSTPROCESS' macro
has been added in `lib/qsort.c' and all floating point comparison functions
will use it when the result of the basic comparison is 0.

This bug was reported by Roberto Baena Gallé.

This fixes bug #56671.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -29210,12 +29210,21 @@ both polygons have to be sorted in an anti-clock-wise manner.
 @node Qsort functions, Permutations, Polygons, Gnuastro library
 @subsection Qsort functions (@file{qsort.h})
 
+@cindex @code{qsort}
 When sorting a dataset is necessary, the C programming language provides
 the @code{qsort} (Quick sort) function. @code{qsort} is a generic function
 which allows you to sort any kind of data structure (not just a single
 array of numbers). To define ``greater'' and ``smaller'' (for sorting),
 @code{qsort} needs another function, even for simple numerical types. The
 functions introduced in this section are to passed onto @code{qsort}.
+
+@cindex NaN
+Note that larger and smaller operators are not defined on NaN
+elements. Therefore, if the input array is a floating point type, and
+contains NaN values, the relevant functions of this section are going to
+put the NaN elements at the end of the list (after the sorted non-NaN
+elements), irrespective of the requested sorting order (increasing or
+decreasing).
 
 The first class of functions below (with @code{TYPE} in their names) can be
 used for sorting a simple numeric array. Just replace @code{TYPE} with the
