--- a/NEWS
+++ b/NEWS
@@ -147,6 +147,7 @@ See the end of the file for license conditions.
   bug #56641: MakeProfile's center position changes based on precision.
   bug #56635: Update tutorial 3 with bug-fixed NoiseChisel.
   bug #56662: Converting -R to -Wl,-R causes a crash in configure on macOS.
+  bug #56671: Bad sorting with asttable if nan is present.
 
 
 
