--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 Copyright (C) 2015-2019 Free Software Foundation, Inc.
 See the end of the file for license conditions.
 
-* Noteworthy changes in release X.X (library X.X.X) (XXXX-XX-XX) [stable]
+* Noteworthy changes in release 0.10 (library 8.0.0) (2019-08-02) [stable]
 
 ** New features
 
@@ -152,6 +152,8 @@ See the end of the file for license conditions.
   bug #56662: Converting -R to -Wl,-R causes a crash in configure on macOS.
   bug #56671: Bad sorting with asttable if nan is present.
   bug #56709: Segment crash when input has blanks, but labels don't.
+  bug #56710: NoiseChisel sometimes not including blank values in output.
+
 
 
 
